--- a/user-guide.html
+++ b/user-guide.html
@@ -8297,7 +8297,7 @@ The <strong>Assistify</strong> community will help you along, as fast as possibl
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64963656.png" alt="Register" width="400">
+<img src="images/64963656.png" alt="Register" width="400">
 </div>
 </div>
 </div>
@@ -8309,7 +8309,7 @@ The <strong>Assistify</strong> community will help you along, as fast as possibl
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64963657.png" alt="Form" width="400">
+<img src="images/64963657.png" alt="Form" width="400">
 </div>
 </div>
 </div>
@@ -8321,7 +8321,7 @@ The <strong>Assistify</strong> community will help you along, as fast as possibl
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64963658.png" alt="Confirm" width="400">
+<img src="images/64963658.png" alt="Confirm" width="400">
 </div>
 </div>
 </div>
@@ -8405,7 +8405,7 @@ einfach an <a href="mailto:info@assistify.de">info@assistify.de</a></p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64964041.png" alt="SignIn" width="400">
+<img src="images/64964041.png" alt="SignIn" width="400">
 </div>
 </div>
 </div>
@@ -8417,7 +8417,7 @@ einfach an <a href="mailto:info@assistify.de">info@assistify.de</a></p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64964028.png" alt="Username" width="400">
+<img src="images/64964028.png" alt="Username" width="400">
 </div>
 </div>
 </div>
@@ -8429,7 +8429,7 @@ einfach an <a href="mailto:info@assistify.de">info@assistify.de</a></p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64964034.png" alt="Invitation" width="400">
+<img src="images/64964034.png" alt="Invitation" width="400">
 </div>
 </div>
 </div>
@@ -8441,7 +8441,7 @@ einfach an <a href="mailto:info@assistify.de">info@assistify.de</a></p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64964070.png" alt="Locked" width="400">
+<img src="images/64964070.png" alt="Locked" width="400">
 </div>
 </div>
 </div>
@@ -8479,7 +8479,7 @@ das Assistify Team unter <a href="mailto:info@assistify.de">info@assistify.de</a
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64963409.png" alt="Overview" width="860">
+<img src="images/64963409.png" alt="Overview" width="860">
 </div>
 </div>
 </div>
@@ -8510,7 +8510,7 @@ auf keinem deiner Geräte Meldungen.
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64964750.png" alt="Status" width="860">
+<img src="images/64964750.png" alt="Status" width="860">
 </div>
 </div>
 </div>
@@ -8532,7 +8532,7 @@ auf keinem deiner Geräte Meldungen.
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64964723.png" alt="Account" width="820">
+<img src="images/64964723.png" alt="Account" width="820">
 </div>
 </div>
 </div>
@@ -8544,7 +8544,7 @@ auf keinem deiner Geräte Meldungen.
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64964732.png" alt="Profile" width="820">
+<img src="images/64964732.png" alt="Profile" width="820">
 </div>
 </div>
 </div>
@@ -8556,7 +8556,7 @@ auf keinem deiner Geräte Meldungen.
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64964733.png" alt="Password" width="820">
+<img src="images/64964733.png" alt="Password" width="820">
 </div>
 </div>
 </div>
@@ -8581,7 +8581,7 @@ auf keinem deiner Geräte Meldungen.
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64964678.png" alt="Reset" width="420">
+<img src="images/64964678.png" alt="Reset" width="420">
 </div>
 </div>
 </div>
@@ -8593,7 +8593,7 @@ auf keinem deiner Geräte Meldungen.
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64964679.png" alt="Mail" width="420">
+<img src="images/64964679.png" alt="Mail" width="420">
 </div>
 </div>
 </div>
@@ -8621,7 +8621,7 @@ wähle dann den Pfeil ganz links in der Auswahlleiste.</p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64964968.png" alt="Context" width="860">
+<img src="images/64964968.png" alt="Context" width="860">
 </div>
 </div>
 </div>
@@ -8630,7 +8630,7 @@ wähle dann den Pfeil ganz links in der Auswahlleiste.</p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64964967.png" alt="Reply" width="860">
+<img src="images/64964967.png" alt="Reply" width="860">
 </div>
 </div>
 </div>
@@ -8654,7 +8654,7 @@ Desktop anklicken und in das Chat-Fenster ziehen. </p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64963479.png" alt="Drag" width="860">
+<img src="images/64963479.png" alt="Drag" width="860">
 </div>
 </div>
 </div>
@@ -8666,7 +8666,7 @@ Desktop anklicken und in das Chat-Fenster ziehen. </p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64963490.png" alt="Info" width="860">
+<img src="images/64963490.png" alt="Info" width="860">
 </div>
 </div>
 </div>
@@ -8681,7 +8681,7 @@ Desktop anklicken und in das Chat-Fenster ziehen. </p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64963494.png" alt="Ready" width="860">
+<img src="images/64963494.png" alt="Ready" width="860">
 </div>
 </div>
 </div>
@@ -8712,7 +8712,7 @@ Desktop anklicken und in das Chat-Fenster ziehen. </p>
 <div class="content">
 <div class="imageblock">
 <div class="content">
-<img src="_images/64964779.png" alt="64964779">
+<img src="images/64964779.png" alt="64964779">
 </div>
 </div>
 </div>
@@ -8729,7 +8729,7 @@ auch immer ein und erstelle so deine individuell gestaltete Liste.</p>
 <div class="content">
 <div class="imageblock">
 <div class="content">
-<img src="_images/64964782.png" alt="64964782">
+<img src="images/64964782.png" alt="64964782">
 </div>
 </div>
 </div>
@@ -8745,7 +8745,7 @@ vor deiner Nachricht ein.</p>
 <div class="content">
 <div class="imageblock">
 <div class="content">
-<img src="_images/64964781.png" alt="64964781">
+<img src="images/64964781.png" alt="64964781">
 </div>
 </div>
 </div>
@@ -8762,7 +8762,7 @@ Ihre Nachricht umgeben von einer grauen Box.</p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64964780.png" alt="Code" width="860">
+<img src="images/64964780.png" alt="Code" width="860">
 </div>
 </div>
 </div>
@@ -8813,7 +8813,7 @@ Webseite oder E-Mailadresse hinterlegen. Schreib dazu einfach so etwas:</p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64965284.png" alt="Find" width="860">
+<img src="images/64965284.png" alt="Find" width="860">
 </div>
 </div>
 </div>
@@ -8832,7 +8832,7 @@ Suche oben links den Kanalnamen ein.</p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64965283.png" alt="Join" width="860">
+<img src="images/64965283.png" alt="Join" width="860">
 </div>
 </div>
 </div>
@@ -8865,7 +8865,7 @@ explizit eingeladen werden müssen.</p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64965196.png" alt="Public" width="150">
+<img src="images/64965196.png" alt="Public" width="150">
 </div>
 </div>
 </div>
@@ -8882,7 +8882,7 @@ du auf "Mehr Kanäle.." klickst und einen Kanal auswählst. </p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64965197.png" alt="Closed" width="150">
+<img src="images/64965197.png" alt="Closed" width="150">
 </div>
 </div>
 </div>
@@ -8899,7 +8899,7 @@ Mitglied dieser Gruppe bist. </p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64965380.png" alt="Topic" width="150">
+<img src="images/64965380.png" alt="Topic" width="150">
 </div>
 </div>
 </div>
@@ -8917,7 +8917,7 @@ Expertise austauschen.</p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64965199.png" alt="Requests" width="150">
+<img src="images/64965199.png" alt="Requests" width="150">
 </div>
 </div>
 </div>
@@ -8937,7 +8937,7 @@ künstliche Intelligenz von Assistify.</p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64965198.png" alt="Private" width="150">
+<img src="images/64965198.png" alt="Private" width="150">
 </div>
 </div>
 </div>
@@ -8961,7 +8961,7 @@ kann. Man kann einen Kanal in zwei einfachen Schritten erstellen.</p>
 <div class="content">
 <div class="imageblock">
 <div class="content">
-<img src="_images/68245215.png" alt="68245215">
+<img src="images/68245215.png" alt="68245215">
 </div>
 </div>
 </div>
@@ -8983,7 +8983,7 @@ diesem Schritt. </p>
 <div class="content">
 <div class="imageblock">
 <div class="content">
-<img src="_images/68245217.png" alt="68245217">
+<img src="images/68245217.png" alt="68245217">
 </div>
 </div>
 </div>
@@ -9005,7 +9005,7 @@ einfach in eine private Nachricht.</p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64964833.png" alt="Open" width="860">
+<img src="images/64964833.png" alt="Open" width="860">
 </div>
 </div>
 </div>
@@ -9022,7 +9022,7 @@ aufgelistet. Wenn du eine davon ausblenden willst, navigiere deine Maus
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64964834.png" alt="Compose" width="860">
+<img src="images/64964834.png" alt="Compose" width="860">
 </div>
 </div>
 </div>
@@ -9041,7 +9041,7 @@ hinzugefügt.</p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64964832.png" alt="Write" width="860">
+<img src="images/64964832.png" alt="Write" width="860">
 </div>
 </div>
 </div>
@@ -9060,7 +9060,7 @@ Textfeld am unteren Rand des Fensters benutzen.</p>
 <div class="content">
 <div class="imageblock left">
 <div class="content">
-<img src="_images/64964855.png" alt="Leave" width="200">
+<img src="images/64964855.png" alt="Leave" width="200">
 </div>
 </div>
 </div>
@@ -9076,7 +9076,7 @@ darüber navigierst: Ein durchgestrichenes Auge und einen Pfeil.</p>
 <div class="content">
 <div class="imageblock left">
 <div class="content">
-<img src="_images/64964856.png" alt="Hide" width="150">
+<img src="images/64964856.png" alt="Hide" width="150">
 </div>
 </div>
 </div>
@@ -9093,7 +9093,7 @@ dann klicke auf das durchgestrichene Auge.</p>
 <div class="content">
 <div class="imageblock left">
 <div class="content">
-<img src="_images/64964854.png" alt="Leave" width="150">
+<img src="images/64964854.png" alt="Leave" width="150">
 </div>
 </div>
 </div>
@@ -9120,7 +9120,7 @@ Schlüssel-Symbol in der rechten Navigationsleiste.</p>
 </div>
 <div class="imageblock left">
 <div class="content">
-<img src="_images/68231846.png" alt="Secure" width="860">
+<img src="images/68231846.png" alt="Secure" width="860">
 </div>
 </div>
 <div class="admonitionblock note">
@@ -9163,7 +9163,7 @@ verschlüsselten Konversation teilnehmen muss.
 </div>
 <div class="imageblock left">
 <div class="content">
-<img src="_images/68231847.png" alt="ORT" width="860">
+<img src="images/68231847.png" alt="ORT" width="860">
 </div>
 </div>
 </div>
@@ -9182,7 +9182,7 @@ mobilen App erhalten.</p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64964895.png" alt="Desktop" width="860">
+<img src="images/64964895.png" alt="Desktop" width="860">
 </div>
 </div>
 </div>
@@ -9205,7 +9205,7 @@ paar Sekunden.</p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64964907.png" alt="Sound1" width="860">
+<img src="images/64964907.png" alt="Sound1" width="860">
 </div>
 </div>
 </div>
@@ -9214,7 +9214,7 @@ paar Sekunden.</p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64964915.png" alt="Sound2" width="860">
+<img src="images/64964915.png" alt="Sound2" width="860">
 </div>
 </div>
 </div>
@@ -9256,7 +9256,7 @@ nicht gelesen hast.</p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64964934.png" alt="Notify-channel" width="860">
+<img src="images/64964934.png" alt="Notify-channel" width="860">
 </div>
 </div>
 </div>
@@ -9286,7 +9286,7 @@ an deine Kollegen weitergeleitet wird.</p>
 <div class="content">
 <div class="imageblock">
 <div class="content">
-<img src="_images/64963099.png" alt="64963099">
+<img src="images/64963099.png" alt="64963099">
 </div>
 </div>
 </div>
@@ -9298,7 +9298,7 @@ an deine Kollegen weitergeleitet wird.</p>
 <div class="content">
 <div class="imageblock">
 <div class="content">
-<img src="_images/64963061.png" alt="64963061">
+<img src="images/64963061.png" alt="64963061">
 </div>
 </div>
 </div>
@@ -9310,7 +9310,7 @@ an deine Kollegen weitergeleitet wird.</p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64957278.png" alt="Compose" width="860">
+<img src="images/64957278.png" alt="Compose" width="860">
 </div>
 </div>
 </div>
@@ -9326,7 +9326,7 @@ wirst du direkt über den Browser oder via E-Mail benachrichtigt.</p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/64963102.png" alt="Train" width="860">
+<img src="images/64963102.png" alt="Train" width="860">
 </div>
 </div>
 </div>
@@ -9356,7 +9356,7 @@ markiert.</p>
 <div class="content">
 <div class="imageblock left">
 <div class="content">
-<img src="_images/69766654.png" alt="Request" width="200">
+<img src="images/69766654.png" alt="Request" width="200">
 </div>
 </div>
 </div>
@@ -9374,7 +9374,7 @@ diese an deinen Kollegen.</p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/69766661.png" alt="Answer" width="860">
+<img src="images/69766661.png" alt="Answer" width="860">
 </div>
 </div>
 </div>
@@ -9405,7 +9405,7 @@ Kanal erstellen kann?"</p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/69770293.jpg" alt="Conversations1" width="860">
+<img src="images/69770293.jpg" alt="Conversations1" width="860">
 </div>
 </div>
 </div>
@@ -9418,7 +9418,7 @@ anzeigen: </p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/69770486.png" alt="Conversations2" width="860">
+<img src="images/69770486.png" alt="Conversations2" width="860">
 </div>
 </div>
 </div>
@@ -9432,7 +9432,7 @@ dem Papierflieger: </p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/69770485.png" alt="Conversations3" width="860">
+<img src="images/69770485.png" alt="Conversations3" width="860">
 </div>
 </div>
 </div>
@@ -9457,7 +9457,7 @@ Suchergebnisse vorhanden sind.</p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/69770294.jpg" alt="Search" width="860">
+<img src="images/69770294.jpg" alt="Search" width="860">
 </div>
 </div>
 </div>
@@ -9479,7 +9479,7 @@ Kommunikation mit dem Kunden weitere Aktionen durchführen:</p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/68240623.png" alt="LiveChat" width="860">
+<img src="images/68240623.png" alt="LiveChat" width="860">
 </div>
 </div>
 </div>
@@ -9528,7 +9528,7 @@ Dies geschieht, in dem der Nutzer in der linken Spalte den Schalter unter Live C
 <div class="content">
 <div class="imageblock">
 <div class="content">
-<img src="_images/68240521.png" alt="68240521">
+<img src="images/68240521.png" alt="68240521">
 </div>
 </div>
 </div>
@@ -9537,7 +9537,7 @@ Dies geschieht, in dem der Nutzer in der linken Spalte den Schalter unter Live C
 <div class="content">
 <div class="imageblock">
 <div class="content">
-<img src="_images/68240527.png" alt="68240527">
+<img src="images/68240527.png" alt="68240527">
 </div>
 </div>
 </div>
@@ -9553,7 +9553,7 @@ Der Agent kann diese nun auswählen und wird gefragt, ob er sie annehmen möchte
 <div class="content">
 <div class="imageblock">
 <div class="content">
-<img src="_images/68240544.png" alt="68240544">
+<img src="images/68240544.png" alt="68240544">
 </div>
 </div>
 </div>
@@ -9562,7 +9562,7 @@ Der Agent kann diese nun auswählen und wird gefragt, ob er sie annehmen möchte
 <div class="content">
 <div class="imageblock">
 <div class="content">
-<img src="_images/68240570.png" alt="68240570">
+<img src="images/68240570.png" alt="68240570">
 </div>
 </div>
 </div>
@@ -9575,7 +9575,7 @@ Nun ist es möglich wie in jedem anderen Kanal auch Nachrichten auszutauschen.</
 <div class="content">
 <div class="imageblock">
 <div class="content">
-<img src="_images/68240573.png" alt="68240573">
+<img src="images/68240573.png" alt="68240573">
 </div>
 </div>
 </div>
@@ -9592,7 +9592,7 @@ Im Folgenden Dialog kann optional noch ein Kommentar angegeben werden, bspw. fü
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/68240588.png" alt="Close" width="860">
+<img src="images/68240588.png" alt="Close" width="860">
 </div>
 </div>
 </div>
@@ -9601,7 +9601,7 @@ Im Folgenden Dialog kann optional noch ein Kommentar angegeben werden, bspw. fü
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/68240593.png" alt="Close" width="860">
+<img src="images/68240593.png" alt="Close" width="860">
 </div>
 </div>
 </div>
@@ -9624,7 +9624,7 @@ er auf der Webseite, auf der sich der Livechat befindet, er besucht hat. </p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/68240614.png" alt="Metadata" width="860">
+<img src="images/68240614.png" alt="Metadata" width="860">
 </div>
 </div>
 </div>
@@ -9647,7 +9647,7 @@ Verlauf einsehen.</p>
 <div class="content">
 <div class="imageblock text-center">
 <div class="content">
-<img src="_images/68240615.png" alt="History" width="860">
+<img src="images/68240615.png" alt="History" width="860">
 </div>
 </div>
 </div>
@@ -9773,7 +9773,7 @@ Als Workaround empfehlen wir zurzeit auf einen mobilen Browser (bspw. Chrome, Sa
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-09-17 13:12:06 CEST
+Last updated 2017-09-17 16:33:17 CEST
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/github.min.css">
